Some (attempted) fixes for hostnames:

- When the hostname of the client doesn't include a dot, add
  a fake ".localnet" extension, so the server thinks it is a
  valid hostname

- Don't actually do anything in openConnection(). The connection
  will be opened in put(), where the fake hostname is known.
  This probably fixes
BUG: 93544


svn path=/trunk/KDE/kdepimlibs/; revision=753500