kioslave/smtp/smtp.h
@@ -62,7 +62,7 @@ public:
 
 protected:
 
-  bool smtp_open(const QString& fakeHostname = QString());
+  bool smtp_open( const QString & fakeHostName );
 
   /** Closes the connection. If @p nice is true (default), then QUIT
       is sent and it's reponse waited for. */
